décomposer loadServiceClass et améliorer la gestion des erreurs
- Décomposition de la méthode loadServiceClass en sous-méthodes plus petites et spécialisées
- Extraction de la logique de validation dans validateServiceClass
- Amélioration de la gestion des erreurs avec des messages plus clairs
- Ajout de documentation détaillée pour chaque méthode
- Amélioration de la sécurité des types avec des casts explicites
- Optimisation de la création des proxies avec des lambdas